[REFACTOR] AuthControllerTest.java expand coverage to all branches and error states